--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/Mexico_City
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Dr. Luis Arturo Torres  # the main title
+title: A site for technology projects with mobility applicability # the main title
 
 tagline: A doc site for automotive projects # it will display as the subtitle
 
