--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: America/Mexico_City
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: A site for technology projects with mobility applicability # the main title
+title: Luis Arturo Torres Romero # the main title
 
-tagline: A doc site for automotive projects # it will display as the subtitle
+tagline: A site for technology oriented to mobility # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   This site is a doc site for automotive projects and a link to research papers.
