--- a/_config.yml
+++ b/_config.yml
@@ -183,6 +183,10 @@ defaults:
       # to update the code of all other post links in this project.
       permalink: /posts/:title/
   - scope:
+      path: "assets/img"
+    values:
+      image: true
+  - scope:
       path: _drafts
     values:
       comments: false
